--- a/jupyter-notebook/Dockerfile
+++ b/jupyter-notebook/Dockerfile
@@ -2,5 +2,8 @@ FROM jupyter/scipy-notebook:python-3.9.2
 
 RUN conda install --quiet --yes \
     'mlflow=1.17.0' \
-    'sqlalchemy'
+    'sqlalchemy' \
+    'boto3' \
+    'minio'
+
 WORKDIR /notebooks
